--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,21 +13,28 @@
   "dependencies": {
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.7.8",
+    "date-fns": "^3.6.0",
+    "date-picker": "^0.5.0",
+    "formik": "^2.4.6",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.1",
+    "@types/yup": "^0.32.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
