--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,8 +20,10 @@
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-cropper": "^2.3.3",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "semantic-ui-css": "^2.5.0",
