--- a/client-app/package.json
+++ b/client-app/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "semantic-ui-css": "^2.5.0",
@@ -37,6 +38,7 @@
     "@types/react": "^18.3.12",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.1",
+    "@types/react-infinite-scroller": "^1.2.5",
     "@types/yup": "^0.32.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
