--- a/.github/workflows/main_vscdevph-reactivities.yml
+++ b/.github/workflows/main_vscdevph-reactivities.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install deps and build react app
         run: | 
-          cd client app
+          cd client-app
           npm install
           npm run build 
 
