Fix workflow npm ci

--- a/.github/workflows/main_vscdevph-reactivities.yml
+++ b/.github/workflows/main_vscdevph-reactivities.yml
@@ -16,10 +16,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - name: Install deps and build react app
         run: | 
           cd client-app
-          npm install
+          npm ci
           npm run build 
 
       - name: Set up .NET Core
