--- a/.github/workflows/main_vscdevph-reactivities.yml
+++ b/.github/workflows/main_vscdevph-reactivities.yml
@@ -16,16 +16,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+      # - name: Set up NodeJS
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '20'
 
-      - name: Install deps and build react app
-        run: | 
-          cd client-app
-          npm ci
-          npm run build 
+      # - name: Install deps and build react app
+      #   run: | 
+      #     cd client-app
+      #     npm ci
+      #     npm run build 
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
