--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@greatsumini/react-facebook-login": "^3.4.0",
     "@microsoft/signalr": "^8.0.7",
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.7.8",
@@ -47,6 +48,7 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-mkcert": "^1.17.6"
   }
 }
