--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "date-picker": "^0.5.0",
     "formik": "^2.4.6",
+    "mkcert": "^3.2.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
